# MIREA

./: README.md  dz1-arithmetic.cpp  dz1-lamp_and_etc.cpp  dz1-name.cpp  dz3-filtr.cpp  dz3-zaem.cpp  dz4-autoDecode.cpp  dz4-file.cpp  dz4-sinusoida.cpp
DZ/1/: dz1.4.cpp
DZ/2/: dz2.3.cpp  dz2.4.cpp  dz2.5.cpp
DZ/3/: dz3.2.cpp  dz3.5.cpp
DZ/4/: dz4.1[lazarev_t].cpp  dz4.4.cpp  dz4.8[lazarev_t].cpp
First semester/: README.md
First semester/Homework/1/: dz1.3.cpp
First semester/Homework/2/: dz2.1.cpp  dz2.2.cpp
First semester/Homework/3/: dz3.2[icYFTL].cpp  dz3.2[lazarev_t].cpp  dz3.3.cpp  dz3.5.cpp
First semester/Homework/4/: dz.4.6[devzZze].cpp  dz4.1[icYFTL].cpp  dz4.2.cpp  dz4.3.cpp  dz4.5[lazarev_t].cpp  dz4.7[lazarev_t].cpp  dz4.9.cpp
First semester/Personal Tasks/: VizherCipher.cpp
First semester/Special tasks/: Euclid.cpp
Second semester/: README.md
Second semester/AOD/SManager/SManager/: CMakeLists.txt  SManager.cpp  SManager.h  SManager.vcxproj  SManager.vcxproj.filters  cmake_install.cmake
Second semester/AOD/SManager/SManager/SManager.dir/Release/SManager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SManager.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Second semester/AOD/SManager/SManager/include/: Console.h  Menu.h  Sorts.h
Second semester/AOD/SManager/SManager/source/: Console.cpp  Menu.cpp  Sorts.cpp
Special/: Resheto.cpp
Third semester/CourseWork/: .gitignore  LICENSE  README.md  api_reference.md
(+104 files in other folders)
